--- a/src/styles/calorieDiary.css
+++ b/src/styles/calorieDiary.css
@@ -3,22 +3,19 @@
     height: 8em;
     padding: 1em;
     border-radius: 50%;
-    box-shadow: 3px 3px 5px -1px rgba(0, 0, 0, 0.3),
-                -3px -3px 5px -1px rgba(224, 242, 254, 0.2);
 }
 
-.innerCircle {
-    width: 6rem;
-    height: 6rem;
-    border-radius: 50%;
-    box-shadow: inset 3px 3px 5px -1px rgba(0, 0, 0, 0.3),
-                inset -3px -3px 5px -1px rgba(224, 242, 254, 0.2);
+.calorieBox {
+    box-shadow: 3px 3px 5px 0px rgba(0, 0, 0, 0.3),
+    -3px -3px 5px 0px rgba(224, 242, 254, 0.5);
 }
 
 .progressBar {
     position: relative;
-    width: 8em;
-    height: 8em;
+    bottom: 0.5em;
+    right: 0.5em;
+    width: 7em;
+    height: 7em;
     border-radius: 50%;
     display: grid;
     place-items: center;
@@ -27,10 +24,12 @@
 .progressBar::before {
     content: '';
     position: absolute;
-    height: 6em;
-    width: 6em;
+    height: 5.5em;
+    width: 5.5em;
     border-radius: 50%;
-    background-color: #09090b;
+    background-color: #cbd5e1;
+    box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.3),
+                -3px -3px 5px 1px rgba(255, 255, 255, 0.1);
 }
 
 .valueContainer {
